force-app/main/default/objects/StoreConnect_Add_on_Klaviyo__c/StoreConnect_Add_on_Klaviyo__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Default settings for StoreConnect Add-on: Klaviyo package flows. This can be overridden in the flow themselves if required.</description>
    <label>StoreConnect Add-on: Klaviyo</label>
</CustomObject>