force-app/main/default/objects/StoreConnect_Add_on_Klaviyo__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>Batch requests into chunks of this size. Use a value of zero to batch every request.</description>
    <inlineHelpText>Batch requests into chunks of this size. Use a value of zero to batch every request</inlineHelpText>
    <label>Batch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>