force-app/main/default/objects/StoreConnect_Add_on_Klaviyo__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>The Salesforce Named Credential API name used for the integration. For a multi-instance integration, override the flow.</description>
    <inlineHelpText>The Salesforce Named Credential API name used for the integration</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>