force-app/main/default/objects/StoreConnect_Add_on_Klaviyo__c/fields/Platform_Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Instance_Name__c</fullName>
    <description>The name to be used in the Integration__c.Platform__c field. Alter flows inputs to ignore this value for a 1:many relationship.</description>
    <inlineHelpText>The name to be used in the Integration__c.Platform__c field</inlineHelpText>
    <label>Platform Instance Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>